Implemented the CartItemController and the ItemUpdatedInCartEvent